QueryBuilderResultTranslator fix